# robot-code-examples

kavrakilab_robots_tests/: .project  README.md
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/env-hooks/: 99.test_fetch_common_functions.bash
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/launch/: octomap.launch  replay.launch  slam.launch  vicon_bridge.launch  vicon_localization.launch
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/maps/: kavrakilab_map_gmapping.yaml  kavrakilab_map_karto.pgm  kavrakilab_map_karto.yaml  simulation_map_gmapping.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/tools/rviz/: default.rviz
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/vicon_bridge/: localization_tests.yaml  pick_place_gmapping_localization.yaml  pick_place_vicon_localization.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/vicon_object_server/objects/: can1.yaml  soup_can_sim.yaml  table1.yaml  table_kavrakilab.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/vicon_object_server/scenes/: fetch_vicon_demo.yaml  fetch_vicon_demo_sim.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/vicon_object_server/trajectories/: soup_can.yaml  soup_can_sim.yaml  table1.yaml  table_kavrakilab.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/parameters/world_modeling/: amcl.yaml  ekf_odom.yaml  ekf_vicon.yaml  slam_gmapping.yaml
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/scripts/: navvicon_transform_node.py
kavrakilab_robots_tests/tests_fetch/test_fetch_common_bringup/src/: fetch_vicon_demo.cpp  fetch_vicon_pick_demo.cpp
kavrakilab_robots_tests/tests_fetch/test_fetch_desktop_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_fetch/test_fetch_desktop_bringup/env-hooks/: 99.test_fetch_desktop_functions.bash
kavrakilab_robots_tests/tests_fetch/test_fetch_desktop_bringup/launch/: base_teleop.launch  rviz.launch
kavrakilab_robots_tests/tests_fetch/test_fetch_hardware_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_fetch/test_fetch_hardware_bringup/env-hooks/: 99.test_fetch_hardware_functions.bash
kavrakilab_robots_tests/tests_fetch/test_fetch_hardware_bringup/launch/: full.launch  start.launch
kavrakilab_robots_tests/tests_fetch/test_fetch_hardware_bringup/scripts/: camera_emulator2.py
kavrakilab_robots_tests/tests_fetch/test_fetch_simulation_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_fetch/test_fetch_simulation_bringup/env-hooks/: 99.test_fetch_simulation_functions.bash
kavrakilab_robots_tests/tests_fetch/test_fetch_simulation_bringup/launch/: full.launch  start.launch
kavrakilab_robots_tests/tests_ur5/test_ur5_desktop_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_ur5/test_ur5_desktop_bringup/env-hooks/: 99.test_ur5_desktop_functions.bash
kavrakilab_robots_tests/tests_ur5/test_ur5_simulation_bringup/: CMakeLists.txt  package.xml
kavrakilab_robots_tests/tests_ur5/test_ur5_simulation_bringup/env-hooks/: 99.test_ur5_simulation_functions.bash
kavrakilab_robots_tests/tests_ur5/test_ur5_simulation_bringup/gazebo/models/can_sim/: model.config  model.sdf
kavrakilab_robots_tests/tests_ur5/test_ur5_simulation_bringup/gazebo/models/cube_sim/: model.sdf
kavrakilab_robots_tests/tests_ur5/test_ur5_simulation_bringup/launch/: start_gazebo.launch  start_moveit.launch  start_vicon_object_server.launch
pick_place_server/: README.md
pick_place_server/pick_place_server_client/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_client/include/: pick_place_client.h
pick_place_server/pick_place_server_client/src/: client.cpp
pick_place_server/pick_place_server_demo/pick_place_server_demo_common_bringup/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_demo/pick_place_server_demo_common_bringup/env-hooks/: 99.pick_place_server_demo_common.bash
pick_place_server/pick_place_server_demo/pick_place_server_demo_common_bringup/launch/: vicon_bridge.launch
pick_place_server/pick_place_server_demo/pick_place_server_demo_common_bringup/parameters/vicon_bridge/: simulation_scene.yaml
pick_place_server/pick_place_server_demo/pick_place_server_demo_common_bringup/src/: block_stack_demo.cpp
pick_place_server/pick_place_server_demo/pick_place_server_demo_desktop_bringup/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_demo/pick_place_server_demo_desktop_bringup/env-hooks/: 99.pick_place_server_demo_desktop.bash
pick_place_server/pick_place_server_demo/pick_place_server_demo_desktop_bringup/launch/: rviz.launch
pick_place_server/pick_place_server_demo/pick_place_server_demo_simulation_bringup/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_demo/pick_place_server_demo_simulation_bringup/env-hooks/: 99.pick_place_server_demo_simulation.bash
pick_place_server/pick_place_server_demo/pick_place_server_demo_simulation_bringup/launch/: start_gazebo.launch  start_moveit.launch  start_vicon_object_server.launch
pick_place_server/pick_place_server_gripper_server/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_gripper_server/action/: Grip.action
pick_place_server/pick_place_server_gripper_server/launch/: gripper_server.launch
pick_place_server/pick_place_server_gripper_server/src/: gripper_client_test.cpp  gripper_server.cpp
pick_place_server/pick_place_server_server/: CMakeLists.txt  package.xml
pick_place_server/pick_place_server_server/action/: PickPlace.action
pick_place_server/pick_place_server_server/env-hooks/: 99.pick_place_server_server_functions.bash
pick_place_server/pick_place_server_server/launch/: start_pick_place_server.launch
pick_place_server/pick_place_server_server/src/: pick_place_server.cpp  pick_place_server_client_test.cpp
(+42 files in other folders)
