<?xml version="1.0"?>
<package format="2">
  <name>pick_place_server_client</name>
  <version>0.0.0</version>
  <description>The tic_tac_toe_demos package</description>

  <maintainer email="therring@todo.todo">therring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Pick Place Server -->
  <depend>pick_place_server_gripper_server</depend>
  <depend>pick_place_server_server</depend>

  <exec_depend>message_generation</exec_depend>
</package>
