<?xml version="1.0"?>
<package format="2">
  <name>test_fetch_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_fetch_desktop_bringup package</description>

  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>test_fetch_common_bringup</depend>
  <depend>rqt_gui</depend>
  <depend>rviz</depend>
</package>
