<?xml version="1.0"?>
<package>
  <name>test_fetch_hardware_bringup</name>
  <version>0.0.0</version>
  <description>The test_fetch_simulation_bringup package</description>

  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Fetch -->
  <run_depend>fetch_teleop</run_depend>
  <run_depend>robot_controllers</run_depend>
  
  <!-- Vicon -->
  <run_depend>vicon_bridge</run_depend>
  
  <!-- Test Fetch -->
  <run_depend>test_fetch_common_bringup</run_depend>
  <run_depend>test_fetch_desktop_bringup</run_depend>

</package>
