<?xml version="1.0"?>
<package format="2">
  <name>test_fetch_simulation_bringup</name>
  <version>0.0.0</version>
  <description>The test_fetch_simulation_bringup package</description>

  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Fetch -->
  <depend>fetch_gazebo</depend>
  <depend>fetch_teleop</depend>
  <depend>robot_controllers</depend>
  
  <!-- Vicon -->
  <depend>vicon_bridge_emulator</depend>
  
  <!-- Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  
  <!-- Test Fetch -->
  <depend>test_fetch_common_bringup</depend>
  <depend>test_fetch_desktop_bringup</depend>

</package>
