<?xml version="1.0"?>
<package format="2">
  <name>test_ur5_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_ur5_desktop_bringup package</description>

  <maintainer email="teh6@rice.edu">Thomas Herring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>ur5_robotiq85_moveit_config</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
