<package format="2">
  <name>pick_place_server_demo_common_bringup</name>
  <version>0.0.0</version>
  <description>The pick_place_server_demo_common_bringup package</description>

  <maintainer email="teh6@rice.edu">Thomas Herring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- UR5 -->
  <depend>ur5_robotiq85_moveit_config</depend>
  <depend>robotiq_force_torque_sensor</depend>
  <depend>robotiq_85_description</depend>

  <!-- Vicon Object Server -->
  <depend>vicon_object_server_server</depend>
  <depend>vicon_object_server_msgs</depend>
  <depend>vicon_object_server_library</depend>
  
  <!-- Moveit -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  
  <!-- tf/tf2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- others -->
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>yaml-cpp</depend>
  <depend>control_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>gazebo_ros_link_attacher</depend>
  <depend>pick_place_server_server</depend>
  <depend>pick_place_server_client</depend>

  <exec_depend>message_generation</exec_depend>

</package>
